plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

loom {
	accessWidenerPath = file("src/main/resources/kaleidoscope_tavern.accesswidener")
}

repositories {
	maven {
		  name = "Terraformers"
		  url = "https://maven.terraformersmc.com/"}
	  maven { url = "https://api.modrinth.com/maven"}
	  maven {
		  // location of the maven that hosts JEI files before January 2023
		  name = "Progwml6's maven"
		  url = "https://dvs1.progwml6.com/files/maven/"
	  }
	  maven {
		  // location of the maven that hosts JEI files since January 2023
		  name = "Jared's maven"
		  url = "https://maven.blamejared.com/"
	  }
	  maven {
		  // location of a maven mirror for JEI files, as a fallback
		  name = "ModMaven"
		  url = "https://modmaven.dev"
	  }
	  maven {
		url = "https://maven.shedaniel.me"
	  }
	  maven {
		url = "https://maven.architectury.dev"
		content {
			includeGroup "dev.architectury"
		}
	  }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "maven.modrinth:jade:${project.jade_version}"
	modCompileOnlyApi("mezz.jei:jei-${project.minecraft_version}-fabric-api:19.27.0.340")
	modCompileOnly "dev.emi:emi-fabric:1.1.22+1.21.1:api"
	modCompileOnly "dev.emi:emi-fabric:1.1.22+1.21.1"
	// REI 前置
	modImplementation "me.shedaniel.cloth:cloth-config-fabric:15.0.140"
	modImplementation "dev.architectury:architectury-fabric:13.0.8"
	// REI API for Fabric Loom
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:16.0.799"
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-default-plugin-fabric:16.0.799"
	modRuntimeOnly "maven.modrinth:rei:16.0.799+fabric-fabric,1.21.1"
	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}